# data-pipeline

./: .env.back  .env.bak  .env.example  .gitignore  AGENTS.md  README.md  backtest_results.csv  best_rnn_model.pth  best_tcn_model.pth  best_transformer_model.pth  conftest.py  data-pipeline.py  datasources.md  docker-compose.yml  force_gex_snapshot.py  import_data.py  ml_backtest_results.json  ml_backtest_summary.csv  nq-log  previous_contract  pyproject.toml  requirements.txt  run_server.py  schwab-test-stream.py  schwab-test.py  start_live_trading.sh  sweep_runner.py  temp_scid_extract.py  test_backtest.json  test_schwab_auto_refresh.py  test_tt_client.py  tp_sl_ratio_comparison.csv  verify_timestamps_report.csv  verify_timestamps_report_after_fix.csv
.githooks/: pre-push
backend/: AGENTS.md
contracts/: __init__.py  redis_channels.py  sweep_alert.py
discord-bot/: AGENTS.md  CHANGES_APPLIED.md  CODE_REVIEW.md  env_loader.py  run_discord_bot.py
docs/: AGENT_SKILL_MATRIX.md  DATA_STRUCTURE_AND_GOVERNANCE.md  ENRICHED_EXPORT.md  GEX_HISTORY_PIPELINE.md  INTER_REPO.md  MICRO_AGENT_ARCHITECTURE.md  ONBOARDING.md  PARQUET_COVERAGE.md  RECONCILE_JOBSTORE_VS_PARQUET.md  REPO_OWNERSHIP.md  SECURITY.md  SWEEP_MOVED_TO_DATA_TRADING.md  TASTYTRADE_TRIN_STREAMING.md  TRADING_SYSTEMS_TIPS.md  UW_ALERTING_TASKS.md  UW_MESSAGE_HANDLING.md  import_verification_2025-11-16.md  modeling_playbook.md  tastytrade-integration.md
examples/: data-pipeline.py.orig  depth_live_monitor.py  schwab_token_init.py  schwab_token_refresh.py  tastytrade_stream_service.py
ml/: README.md  (+55 more)
(+585 files in other folders)
